bottom icons; fixed gallery spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,17 +7,23 @@ body {
 #gallery {
   position: relative;
   padding: 5px;
-  width: 80%;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
 }
 .img {
   display: block;
-  margin: 10px;
+  margin: 5px;
   float: left;
   background: #121212;
 }
 .img img {
   width: 100%;
   height: 100%;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
